フラグメント書き換え
一部プログラムをフラグメントを使用したプログラムに書き換え。不要なクラスの削除。

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -9,19 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.kakeibo.MainActivity"
-            android:label="@string/app_name">
+        <activity android:name=".activities.CalendarActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name="com.example.dentaku.Kakeibo"></activity>
-        <activity android:name="com.example.database.Database"></activity>
-        <activity android:name="com.example.database.ShowDataBase"></activity>
-        <activity android:name="com.example.memo.Memo"></activity>
-        <activity android:name="com.example.shifto.shifto"></activity>
+        <activity android:name=".activities.KakeiboListActivity">
+        </activity>
     </application>
 
 </manifest>
