--- a/src/main/main/AndroidManifest.xml
+++ b/src/main/main/AndroidManifest.xml
@@ -9,12 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.BaseActivity">
+        <activity android:name=".activities.CalendarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".activities.KakeiboListActivity">
+        </activity>
+        <activity android:name=".database.Database">
         </activity>
     </application>
 
