--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.CalendarActivity">
+        <activity android:name=".activities.BaseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -17,8 +17,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.KakeiboListActivity">
-        </activity>
-        <activity android:name=".database.Database">
         </activity>
     </application>
 
